# coral

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  readme.md
benches/: level1_asum.rs  level1_axpy.rs  level1_copy.rs  level1_dot.rs  level1_iamax.rs  level1_nrm2.rs  level1_rot.rs  level1_scal.rs  level1_swap.rs  level2_cgemv.rs  level2_dgemv.rs  level2_gemv.rs  level2_ger.rs  level2_hemv.rs  level2_sgemv.rs  level2_sger.rs  level2_ssymv.rs  level2_ssyr.rs  level2_ssyr2.rs  level2_strmv.rs  level2_strsv.rs  level2_symv.rs  level2_trmv.rs  level2_trsv.rs  level2_zgemv.rs  level3_cgemm_cc.rs  level3_cgemm_nn.rs  level3_cgemm_tt.rs  level3_dgemm_nn.rs  level3_dgemm_tt.rs  level3_sgemm_nn.rs  level3_sgemm_tt.rs  level3_zgemm_cc.rs  level3_zgemm_nn.rs  level3_zgemm_tt.rs
coral-aarch64/: Cargo.toml  README.md
coral-aarch64/benches/: level1_axpy.rs  level1_copy.rs  level1_dot.rs  level1_iamax.rs  level2_hemv.rs  level2_sger.rs  level2_ssyr2.rs  level2_symv.rs  level2_trmv.rs  level2_trsv.rs  level3_cgemm_nn.rs  level3_dgemm_nn.rs  level3_dgemm_tt.rs  level3_sgemm_nn.rs  level3_sgemm_tt.rs  level3_zgemm_cc.rs  level3_zgemm_nn.rs  level3_zgemm_tt.rs
coral-aarch64/src/: enums.rs  lib.rs
coral-aarch64/tests/: level1.rs  level2.rs  level3.rs
coral-benches/: Cargo.toml
coral-benches/benches/: fused_saxpyf.rs  fused_sdotf.rs  level1_isamax.rs  level1_isamax_sweep.rs  level1_sasum.rs  level1_sasum_sweep.rs  level1_saxpy.rs  level1_saxpy_sweep.rs  level1_scopy.rs  level1_scopy_sweep.rs  level1_sdot.rs  level1_sdot_sweep.rs  level1_snrm2.rs  level1_snrm2_sweep.rs  level1_srot.rs  level1_srot_sweep.rs  level1_srotm.rs  level1_srotm_sweep.rs  level1_sscal.rs  level1_sscal_sweep.rs  level1_sswap.rs  level1_sswap_sweep.rs  level2_sgemv.rs  level2_sgemv_sweep.rs  level2_sger.rs  level2_sger_sweep.rs  level2_ssymv.rs  level2_ssymv_sweep.rs  level2_ssyr.rs  level2_ssyr2.rs  level2_ssyr2_sweep.rs  level2_ssyr_sweep.rs  level2_strmv.rs  level2_strmv_sweep.rs  level2_strsv.rs  level2_strsv_sweep.rs  level3_sgemm.rs  level3_sgemm_sweep.rs
coral-benches/benches/common/: mod.rs
coral-safe/: Cargo.toml  README.md  katex-header.html
coral-safe/benches/: fused_saxpyf.rs  fused_sdotf.rs  level1_asum.rs  level1_axpy.rs  level1_copy.rs  level1_dot.rs  level1_iamax.rs  level1_isamax.rs  level1_nrm2.rs  level1_rot.rs  level1_sasum.rs  level1_sasum_sweep.rs  level1_saxpy.rs  level1_saxpy_sweep.rs  level1_scopy_sweep.rs  level1_sdot_sweep.rs  level1_snrm2_sweep.rs  level1_srot.rs  level1_srot_sweep.rs  level1_srotm_sweep.rs  level1_sscal.rs  level1_sscal_sweep.rs  level1_sswap.rs  level1_sswap_sweep.rs  level1_swap.rs  level2_sgemv.rs  level2_sgemv_sweep.rs  level2_ssymv.rs  level2_ssymv_sweep.rs  level2_ssyr.rs  level2_ssyr2.rs  level2_ssyr2_sweep.rs  level2_strsv.rs  level2_strsv_sweep.rs
coral-safe/benches/common/: mod.rs
coral-safe/src/: lib.rs  types.rs
coral-safe/src/fortran/: helpers.rs  index.rs  isamax.rs  isamax_f77.rs  mod.rs  sasum.rs  sasum_f77.rs  saxpy.rs  saxpy_f77.rs  scopy.rs  scopy_f77.rs  sdot.rs  sdot_f77.rs  sgemm.rs  sgemm_f77.rs  sgemv.rs  sgemv_f77.rs  sger.rs  sger_f77.rs  snrm2.rs  snrm2_f77.rs  srot.rs  srot_f77.rs  srotg.rs  srotg_f77.rs  srotm.rs  srotm_f77.rs  srotmg.rs  srotmg_f77.rs  sswap.rs  sswap_f77.rs  ssymv.rs  ssymv_f77.rs  ssyr.rs  ssyr2.rs  ssyr2_f77.rs  ssyr_f77.rs  strmv.rs  strmv_f77.rs  strsv.rs  (+2 more)
coral-safe/src/fused/: mod.rs  saxpyf.rs  sdotf.rs  sscalf.rs
coral-safe/src/level1/: isamax.rs  mod.rs  sasum.rs  saxpy.rs  scopy.rs  sdot.rs  snrm2.rs  srot.rs  srotg.rs  srotm.rs  srotmg.rs  sscal.rs  sswap.rs
coral-safe/src/level2/: mod.rs  pack_panel.rs  pack_vector.rs  sgemv.rs  sgemv_n.rs  sgemv_notranspose.rs  sgemv_t.rs  sger.rs  ssymv.rs  ssyr.rs  ssyr2.rs  strlmv.rs  strlsv.rs  strmv.rs  strsv.rs  strumv.rs  strusv.rs
coral-safe/src/level3/: macrokernel.rs  mod.rs  packers.rs  sgemm.rs  sgemm_nn.rs  sgemm_nt.rs  sgemm_tn.rs  sgemm_tt.rs  strlsm_n.rs  strlsm_t.rs  strsm.rs  strusm_n.rs  strusm_t.rs  subs_lower.rs  subs_upper.rs  substitutions.rs
coral-safe/src/level3/microkernel/: block.rs  edge.rs  mod.rs
coral-safe/tests/: common.rs  fused.rs  level1.rs  level1_safe.rs  level2.rs  level3.rs  types.rs
coral-safe/tests/fused/: saxpyf.rs  sdotf.rs
coral-safe/tests/level1/: asum_tests.rs  common.rs  copy_tests.rs  dot_tests.rs  iamax_tests.rs  isamax.rs  nrm2_tests.rs  rot_tests.rs  sasum.rs  sasum_tests.rs  saxpy.rs  scopy.rs  sdot.rs  sdot_tests.rs  snrm2.rs  srot.rs  srotg.rs  srotm.rs  srotmg.rs  srotmg_tests.rs  sswap.rs  swap_tests.rs
coral-safe/tests/level1_safe/: axpy_tests.rs
coral-safe/tests/level2/: sgemv.rs  sger.rs  ssymv.rs  ssyr.rs  ssyr2.rs  strmv.rs  strsv.rs
coral-safe/tests/level3/: sgemm.rs
plots/: plot_sweep.py
src/: enums.rs  lib.rs
src/level1/: assert_length_helpers.rs  asum.rs  caxpy.rs  ccopy.rs  cdotc.rs  cdotu.rs  cscal.rs  csrot.rs  csscal.rs  cswap.rs  dasum.rs  daxpy.rs  dcopy.rs  ddot.rs  dnrm2.rs  drot.rs  drotg.rs  drotm.rs  drotmg.rs  dscal.rs  dswap.rs  dzasum.rs  dznrm2.rs  iamax.rs  icamax.rs  idamax.rs  isamax.rs  izamax.rs  mod.rs  nrm2.rs  nrm2_helpers.rs  sasum.rs  saxpy.rs  scal.rs  scasum.rs  scnrm2.rs  scopy.rs  sdot.rs  snrm2.rs  srot.rs  (+13 more)
src/level1_special/: caxpyf.rs  cdotcf.rs  cdotuf.rs  daxpyf.rs  ddotf.rs  mod.rs  saxpyf.rs  sdotf.rs  zaxpyf.rs  zdotcf.rs  zdotuf.rs
src/level2/: assert_length_helpers.rs  buf_helpers.rs  cgemv.rs  cgemv_conjtranspose.rs  cgemv_notranspose.rs  cgemv_transpose.rs  cgerc.rs  cgeru.rs  chemv.rs  cher.rs  cher2.rs  ctrlmv.rs  ctrlsv.rs  ctrmv.rs  ctrsv.rs  ctrumv.rs  ctrusv.rs  dgemv.rs  dgemv_notranspose.rs  dgemv_transpose.rs  dger.rs  dsymv.rs  dsyr.rs  dsyr2.rs  dtrlmv.rs  dtrlsv.rs  dtrmv.rs  dtrsv.rs  dtrumv.rs  dtrusv.rs  enums.rs  examples.py  matrix_ij.rs  mod.rs  panel_packing.rs  sgemv.rs  sgemv_notranspose.rs  sgemv_transpose.rs  sger.rs  ssymv.rs  (+25 more)
src/level3/: c32_macro_kernel.rs  c32_packers.rs  c64_macro_kernel.rs  cgemm.rs  cgemm_cc.rs  cgemm_cn.rs  cgemm_ct.rs  cgemm_nc.rs  (+28 more)
tests/: level1.rs  level2.rs  mod.rs
(+265 files in other folders)
