[package]
name        = "coral-blas-safe"
version     = "0.1.0"
edition     = "2024"
authors     = ["deval deliwala <devaldeliwala@berkeley.edu>"]

license     = "MIT"
description = "a pure-rust safe blas implementation"
readme      = "README.md"
repository  = "https://github.com/devdeliw/CORAL"

categories  = ["science", "mathematics", "algorithms"]
keywords    = ["linear-algebra", "algebra", "matrix", "vector", "math"] 
autobenches = false

exclude = [ 
  "benches/**",
  "target/**", 
]

[lib]
name = "coral_safe"             
path = "src/lib.rs"

[dependencies]
blas-src = { version = "0.12", optional = true, default-features = false }

[features]
default    = []
accelerate = ["blas-src/accelerate"]
openblas   = ["blas-src/openblas"]

[dev-dependencies]
criterion = "0.5"   
cblas-sys = "0.1" 
faer = { version = "0.19" } 
coral-blas = "0.2.1"
rand = "0.8"

[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[[bench]]
name    = "fused_saxpyf"
harness = false
[[bench]] 
name    = "fused_sdotf"
harness = false

[[bench]] 
name    = "level1_sasum"
harness = false 
[[bench]]
name    = "level1_isamax" 
harness = false
[[bench]] 
name    = "level1_snrm2" 
harness = false
[[bench]]
name    = "level1_sswap"
harness = false 
[[bench]]
name    = "level1_saxpy"
harness = false
[[bench]]
name    = "level1_sdot"
harness = false
[[bench]]
name    = "level1_sscal"
harness = false
[[bench]]
name    = "level1_scopy"
harness = false 
[[bench]]
name    = "level1_srot"
harness = false
[[bench]]
name    = "level1_srotm"
harness = false

[[bench]]
name    = "level2_sgemv"
harness = false
[[bench]] 
name    = "level2_sger"
harness = false
[[bench]]
name    = "level2_strsv"
harness = false 
[[bench]] 
name    = "level2_strmv"
harness = false
[[bench]] 
name    = "level2_ssymv"
harness = false
