[package]
name        = "coral-blas"
version     = "0.3.1"
edition     = "2024"
authors     = ["deval deliwala <devaldeliwala@berkeley.edu>"]

license     = "MIT"
description = "a pure-rust safe blas implementation"
readme      = "README.md"
repository  = "https://github.com/devdeliw/coral/tree/main/coral-safe"

categories  = ["science", "mathematics", "algorithms"]
keywords    = ["linear-algebra", "algebra", "matrix", "vector", "math"] 
autobenches = false

exclude = [ 
  "benches/**",
  "target/**", 
]

[lib]
name = "coral"             
path = "src/lib.rs"
bench = false

[dependencies]
blas-src = { version = "0.12", optional = true, default-features = false }

[features]
default    = []
accelerate = ["blas-src/accelerate"]
openblas   = ["blas-src/openblas"]

[dev-dependencies]
criterion = "0.5"   
cblas-sys = "0.1" 
faer = "0.19" 
rand = "0.8"

[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]
